Replace Vert.x Kafka client with native Java Kafka client in the admin endpoint (#736)
* Replace Vert.x Kafka client with native Java Kafka client in the admin endpoint

Signed-off-by: Paolo Patierno <ppatierno@live.com>

* Fixed log TRACE level for handle method

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Signed-off-by: Paolo Patierno <ppatierno@live.com>